<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SellingPage"
    android:background="#DBDBD5">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:background="#CCCBCB"
                android:fontFamily="@font/nunito"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:text="Level"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_senior"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:paddingHorizontal="3dp"
                android:text="Senior" />

            <RadioButton
                android:id="@+id/radio_junior"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:paddingHorizontal="3dp"
                android:text="Junior" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:background="#CCCBCB"
                android:fontFamily="@font/nunito"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:text="Category"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/category_spinner"
                android:spinnerMode="dialog"
                android:prompt="@string/hint_resource"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:entries="@array/category_array"
                android:paddingHorizontal="15dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:background="#CCCBCB"
                android:fontFamily="@font/nunito"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:text="Size"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/size_spinner"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:entries="@array/size_array"
                android:paddingHorizontal="15dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:background="#CCCBCB"
                android:fontFamily="@font/nunito"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:text="Condition"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/condition_spinner"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:entries="@array/condition_array"
                android:paddingHorizontal="15dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:background="#CCCBCB"
                android:fontFamily="@font/nunito"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:text="Set Price"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/setPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:ems="8"
                android:hint="$"
                android:inputType="number"
                android:text="@string/price_set"
                android:paddingHorizontal="9dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:background="#CCCBCB"
                android:fontFamily="@font/nunito"
                android:paddingHorizontal="12dp"
                android:paddingVertical="7dp"
                android:text="@string/description_text"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/extraDescription"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:maxLength="10"
                android:hint="Max. 150 characters"
                android:layout_marginLeft="15dp"
                android:ems="13"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:paddingHorizontal="9dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/borderblack"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="0" />


            <Button
                android:id="@+id/btnSelectImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/uploadimg"
                android:fontFamily="@font/msyi"
                app:backgroundTint="@null" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:background="@drawable/borderblack">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#CCCBCB"
                android:fontFamily="@font/nunito"
                android:paddingHorizontal="12dp"
                android:paddingVertical="7dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/contactinstruction" />

            <EditText
                android:id="@+id/EmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                android:paddingLeft="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="Email"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                android:paddingLeft="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="Phone"
                android:ems="10"
                android:inputType="phone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/uploadListing"
                android:onClick="listing_overview"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center"
                android:background="@drawable/roundedcorner2"
                android:fontFamily="@font/msyi"
                android:text="UPLOAD LISTING"
                android:textColor="#FFFFFF"
                android:textSize="15dp"
                app:backgroundTint="@null"/>

        </LinearLayout>


    </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

